--- a/woostify/style.css
+++ b/woostify/style.css
@@ -4,7 +4,7 @@ Theme URI:    https://woostify.com
 Author:       Woostify
 Author URI:   https://woostify.com/about
 Description:  Woostify is fast, lightweight, responsive and super flexible WooCommerce theme built with SEO, speed, and usability in mind. The theme works great with any of your favorite page builder likes Elementor, Beaver Builder, SiteOrigin, Thrive Architect, Divi, etc. Therefore, you can build any type of websites like shop, business agencies, corporate, portfolio, education, university portal, consulting, church, restaurant, medical and so on. Woostify is compatible with all well-coded plugins, including major ones like WooCommerce, OrbitFox, Yoast, BuddyPress, bbPress, etc. Learn more about the theme and ready to import demo sites at https://woostify.com
-Version:      2.3.6
+Version:      2.3.7
 Requires at least: 4.7
 Tested up to: 6.1
 Requires PHP: 7.3
@@ -6972,6 +6972,12 @@ body:not(.yith-wcms-pro) .woostify-view-prev .w-view-prev-button.processing:not(
   float: left;
   max-width: 100%;
 }
+.has-variation-swatches .product-images{
+  height: 570px;
+}
+.product-images-container{
+  height: 100%;
+}
 @media (min-width: 992px) {
   .product-gallery {
     width: calc((100% - 30px) / 2);
@@ -7153,7 +7159,7 @@ body:not(.yith-wcms-pro) .woostify-view-prev .w-view-prev-button.processing:not(
 }
 
 .product-thumbnail-images {
-  animation: fadeIn 2s;
+  animation: fadeIn 2s linear;
 }
 .product-thumbnail-images.has-single-thumbnail-image {
   display: none;
@@ -7162,7 +7168,7 @@ body:not(.yith-wcms-pro) .woostify-view-prev .w-view-prev-button.processing:not(
 .product-images {
   overflow: hidden;
   position: relative;
-  animation: fadeIn 2s;
+  animation: fadeIn 2s linear;
 }
 .product-images .image-item {
   margin: 0;
