--- a/woostify/style.css
+++ b/woostify/style.css
@@ -4,7 +4,7 @@ Theme URI:    https://woostify.com
 Author:       Woostify
 Author URI:   https://woostify.com/about
 Description:  Woostify is fast, lightweight, responsive and super flexible WooCommerce theme built with SEO, speed, and usability in mind. The theme works great with any of your favorite page builder likes Elementor, Beaver Builder, SiteOrigin, Thrive Architect, Divi, etc. Therefore, you can build any type of websites like shop, business agencies, corporate, portfolio, education, university portal, consulting, church, restaurant, medical and so on. Woostify is compatible with all well-coded plugins, including major ones like WooCommerce, OrbitFox, Yoast, BuddyPress, bbPress, etc. Learn more about the theme and ready to import demo sites at https://woostify.com
-Version:      2.3.7
+Version:      2.3.8
 Requires at least: 4.7
 Tested up to: 6.1
 Requires PHP: 7.3
@@ -3557,25 +3557,6 @@ article p:last-child {
   }
 }
 
-/* Header sticky. Theo nhu trong file js thi bo qua header layout 7 */
-.has-sticky-header .site-header:not(.header-layout-7) {
-  position: sticky;
-  top: 0;
-  z-index: 99;
-}
-
-/* Theo dinh nghia cua wp-admin bar */
-@media screen and (min-width: 601px) {
-  .has-sticky-header.admin-bar .site-header:not(.header-layout-7) {
-    top: 46px;
-  }
-}
-@media screen and (min-width: 783px) {
-  .has-sticky-header.admin-bar .site-header:not(.header-layout-7) {
-    top: 32px;
-  }
-}
-
 /* Header Menu */
 .site-header-inner {
   border-bottom: 1px solid #eaeaea;
@@ -6972,7 +6953,7 @@ body:not(.yith-wcms-pro) .woostify-view-prev .w-view-prev-button.processing:not(
   float: left;
   max-width: 100%;
 }
-.has-variation-swatches .product-images{
+.has-variation-swatches .product-gallery:not(.column-style):not(.grid-style) .product-images{
   height: 570px;
 }
 .product-images-container{
